[tool.poetry]
name = "video-grid-merge"
version = "0.2.25"
description = "This project allows you to use FFmpeg to arrange video files stored in a specified folder in an NxN grid layout and generate the output."
authors = ["7rikaz"]
readme = "README.md"
license = "MIT"
packages = [{include = "video_grid_merge"}]

[tool.taskipy.tasks]
vgmrun = "python video_grid_merge"
vgmrn = "python video_grid_merge/rename_files.py"
vgmrm = "python video_grid_merge/delete_files.py"
vgmtest1 = "pytest -s -vv --cov=. --cov-branch --cov-report term-missing --cov-report html"
vgmtest2 = "pytest --html=htmlcov/report_page.html"
black = "poetry run black video_grid_merge tests ci"
ruffcheck = "poetry run ruff video_grid_merge tests ci"
rufffix = "poetry run ruff video_grid_merge tests ci --fix"
mypy = "poetry run mypy"

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.11.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
taskipy = "^1.11.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
pre-commit = "^3.3.2"
ruff = "^0.6.4"
pytest-xdist = "^3.5.0"
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.ruff]
# Check Rules
lint.select = ["E", "F", "I"]
# Ignore Error
lint.ignore = ["E402","E501"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.per-file-ignores = {}

# Assume Python 3.10.
target-version = "py310"

[tool.mypy]
files = ["video_grid_merge","tests","ci"]
python_version = "3.10"
strict = true
warn_return_any = false
ignore_missing_imports = true
scripts_are_modules = true

[tool.pytest.ini_options]
testpaths = ["tests",]
addopts = "--capture=no"
