[tool.poetry]
name = "video-grid-merge"
version = "0.2.28"
description = "This project allows you to use FFmpeg to arrange video files stored in a specified folder in an NxN grid layout and generate the output."
authors = ["7rikaz"]
readme = "README.md"
license = "MIT"
packages = [{include = "video_grid_merge"}]

[tool.taskipy.tasks]
vgmrun = "python video_grid_merge"
vgmrn = "python video_grid_merge/rename_files.py"
vgmrm = "python video_grid_merge/delete_files.py"
vgmtest1 = "pytest -s -vv --cov=. --cov-branch --cov-report term-missing --cov-report html"
vgmtest2 = "pytest --html=htmlcov/report_page.html"
black = "poetry run black video_grid_merge tests ci"
ruffcheck = "poetry run ruff video_grid_merge tests ci"
rufffix = "poetry run ruff video_grid_merge tests ci --fix"
mypy = "poetry run mypy"
test_gh_action_xml = "python scripts/run_tests.py --report xml"
test_gh_action_term = "python scripts/run_tests.py --report term"

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.11.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
taskipy = "^1.11.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
pre-commit = "^3.3.2"
ruff = "^0.6.7"
pytest-xdist = "^3.5.0"
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]
per-file-ignores = {}

[tool.mypy]
files = ["video_grid_merge","tests","ci"]
python_version = "3.10"
strict = true
warn_return_any = false
ignore_missing_imports = true
scripts_are_modules = true

[tool.pytest.ini_options]
testpaths = ["video_grid_merge", "tests"]
pythonpath = ["."]
addopts = "--cov=video_grid_merge --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["video_grid_merge"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
    "def main"
]

[tool.coverage.html]
directory = "htmlcov"
